--- a/README.Rmd
+++ b/README.Rmd
@@ -42,7 +42,7 @@ This is an example of importing a classification file created with the RDP Class
 
 ```{r example}
 library(speedytax)
-taxonomy_file <- read_tax_example("rdp_classifiification_table.tsv")
+taxonomy_file <- read_tax_example("rdp_table.tsv")
 example_tax_table <- import_rdp_tax_table(in_file = taxonomy_file)
 example_tax_table
 ```
